@@ -1,5 +1,6 @@
 v1.7 - Pending
 	+ Bug: Fix library sorting when adding, e.g., albums to playlist
+	+ Bug: Fix window positioning weirdness when unwithdrawing from systray
 
 v1.6.2 - April 13, 2009
 	+ Bug: Fix cli options (e.g. 'sonata play')
